--- a/Joy_Template/appsettings.json
+++ b/Joy_Template/appsettings.json
@@ -1,12 +1,13 @@
 {
   "AllowedHosts": "*",
   "ConnectionStrings": {
+    "devConnection": "Host=localhost;Port=5432;Database=dbPlayground; User Id=postgres; Password=123456",
     "dbConnection": {
       "Host": "localhost",
       "Port": "5432",
       "User Id": "postgres",
-      "Database": "dbJoyTemplate",
-      "Password": "Northernlights2010"
+      "Database": "dbPlayground",
+      "Password": "123456"
     }
   },
   "Logging": {
