--- a/Joy_Template/Joy_Template.csproj
+++ b/Joy_Template/Joy_Template.csproj
@@ -21,6 +21,11 @@
 		</PackageReference>
 		<PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
 		<PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="6.0.8" />
+		<PackageReference Include="System.Security.Permissions" Version="7.0.0" />
+	</ItemGroup>
+
+	<ItemGroup>
+	  <ProjectReference Include="..\Joy.Database\Joy.Database.csproj" />
 	</ItemGroup>
 
 </Project>
