--- a/Joy_Template/appsettings.json
+++ b/Joy_Template/appsettings.json
@@ -1,7 +1,7 @@
 {
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "devConnection": "Host=localhost;Port=5432;Database=dbPlayground2; User Id=postgres; Password=Northernlights2010",
+    "devConnection": "Host=localhost;Port=5432;Database=dbPlayground; User Id=postgres; Password=Northernlights2010",
     "dbConnection": {
       "Host": "localhost",
       "Port": "5432",
